// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createUser should add a user to the database 1`] = `
"INSERT INTO Users (userId, email, avatar, firstname, lastname)
          VALUES ( 'COGNITO_ID', 'EMAIL', 'http://s3.amazonaws.com/37assets/svn/765-default-avatar.png', 'FIRSTNAME', 'LASTNAME' )"
`;

exports[`createUser should add a user to the database 2`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;

exports[`createUser should respond with failure when an error occurs 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 500,
}
`;
